# AI-Field-Kit

./: .gitignore  README.md  pyproject.toml
basic/: dep-injection-for-testing.py  error-handling.py  inheritance-pattern.py  model-selection.py  quick-chroma-db.py  quick-llama-docs.py  template-class.py  token-counting.py
langchain/: agent-state.py  email-agent-example.py  mcp-client.py  mcp-server.py  middleware-dynamic.py  middleware-hitl.py  middleware-summary.py  setup-tracing.md  supervisor-agent.py
langgraph/: ReAct.py  custom-reducer.py  external-storage.py  pydantic-state.py  summary.py  trim-filter.py
ml-css/: cosine-similarity.py
skills/: README.md
skills/basic/: dep-injection-for-testing.md  error-handling.md  inheritance-pattern.md  model-selection.md  quick-chroma-db.md  quick-llama-docs.md  template-class.md  token-counting.md
skills/langchain/: agent-state.md  email-agent-example.md  mcp-client.md  mcp-server.md  middleware-dynamic.md  middleware-hitl.md  middleware-summary.md  supervisor-agent.md
skills/langgraph/: custom-reducer.md  pydantic-state.md  react.md  summary.md  trim-filter.md
skills/ml-css/: cosine-similarity.md
