[project]
name = "ai-field-kit"
version = "0.1.0"
description = "A living repo of examples and recipes to build real-world AI/LLM tools with Python"
requires-python = ">=3.12"

dependencies = [
    "anthropic>=0.86.0",
    "langchain>=1.2.13",
    "langgraph>=1.1.3",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
]



